<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/color_footer"
    android:padding="5dp">
    
    <!-- 刷新 -->
    <TextView
		android:layout_width="80dp"
		android:layout_height="48dp"
		android:padding="7dp"
		android:gravity="center"
		android:background="@drawable/footerbg1"
		android:drawableLeft="@drawable/sxtb"
		style="@style/main_style_4"
		android:text="@string/refresh"
		android:clickable="true"
		android:visibility="gone"
		android:onClick="commonClick"
		android:id="@+id/footer_refresh"/>
    <!-- 定位 -->
    <TextView
		android:layout_width="80dp"
		android:layout_height="48dp"
		android:padding="7dp"
		android:gravity="center"
		android:background="@drawable/footerbg1"
		android:drawableLeft="@drawable/dw"
		style="@style/main_style_4"
		android:text="@string/location"
		android:clickable="true"
		android:visibility="gone"
		android:onClick="commonClick"
		android:id="@+id/footer_location"/>
    <!-- 清空 -->
    <TextView
   		android:layout_width="80dp"
    	android:layout_height="48dp"
    	android:padding="7dp"
    	android:gravity="center"
    	android:background="@drawable/footerbg1"
   		android:drawableLeft="@drawable/qktb"
   		style="@style/main_style_4"
   		android:text="@string/delete"
   		android:clickable="true"
   		android:visibility="gone"
   		android:onClick="commonClick"
   		android:id="@+id/footer_delete"/>
	<!-- 电话投诉 -->
    <TextView
   		android:layout_width="80dp"
    	android:layout_height="48dp"
    	android:padding="7dp"
    	android:gravity="center"
    	android:background="@drawable/footerbg1"
   		android:drawableLeft="@drawable/tel2"
   		style="@style/main_style_4"
   		android:text="@string/ts"
   		android:clickable="true"
   		android:visibility="gone"
   		android:onClick="commonClick"
   		android:id="@+id/footer_telts"/>
    <!-- 谁在查我 -->
    <TextView
   		android:layout_width="80dp"
    	android:layout_height="48dp"
    	android:padding="7dp"
    	android:gravity="center"
    	android:background="@drawable/footerbg1"
   		android:drawableLeft="@drawable/szcwtb"
   		style="@style/main_style_4"
   		android:text="@string/queryme"
   		android:clickable="true"
   		android:onClick="commonClick"
   		android:visibility="gone"
   		android:id="@+id/footer_szcw"/>
    <!-- 中间按钮 -->
    <TextView
        android:layout_width="0dp"
   		android:layout_height="52dp"
   		android:layout_weight="1"
   		android:layout_marginLeft="5dp"
   		android:gravity="center"
   		android:background="@drawable/btn20782"
   		style="@style/title_style"
   		android:text="@string/fabugoods"
   		android:clickable="true"
   		android:onClick="commonClick"
   		android:id="@+id/footer_center"/>
	<!-- 历史货源 -->
	<TextView
   		android:layout_width="80dp"
    	android:layout_height="48dp"
    	android:layout_marginLeft="5dp"
    	android:padding="7dp"
    	android:gravity="center"
    	android:background="@drawable/footerbg1"
   		android:drawableLeft="@drawable/lshytb2"
   		style="@style/main_style_4"
   		android:text="@string/goods"
   		android:clickable="true"
   		android:onClick="commonClick"
   		android:visibility="gone"
   		android:id="@+id/footer_history"/>
    <!-- 修改 -->
    <TextView
   		android:layout_width="80dp"
    	android:layout_height="48dp"
    	android:layout_marginLeft="5dp"
    	android:padding="7dp"
    	android:gravity="center"
    	android:background="@drawable/footerbg1"
   		android:drawableLeft="@drawable/xgtb"
   		style="@style/main_style_4"
   		android:text="@string/update"
   		android:clickable="true"
   		android:visibility="gone"
   		android:onClick="commonClick"
   		android:id="@+id/footer_update"/>
    
    <!-- 投诉 -->
    <TextView
   		android:layout_width="80dp"
    	android:layout_height="48dp"
    	android:layout_marginLeft="5dp"
    	android:padding="7dp"
    	android:gravity="center"
    	android:background="@drawable/footerbg1"
   		android:drawableLeft="@drawable/xgtb"
   		style="@style/main_style_4"
   		android:text="@string/ts"
   		android:clickable="true"
   		android:visibility="gone"
   		android:onClick="commonClick"
   		android:id="@+id/footer_ts"/>
    <!-- 取消 -->
    <TextView
   		android:layout_width="80dp"
    	android:layout_height="48dp"
    	android:layout_marginLeft="5dp"
    	android:padding="7dp"
    	android:gravity="center"
    	android:background="@drawable/footerbg1"
   		android:drawableLeft="@drawable/qxtb"
   		style="@style/main_style_4"
   		android:text="@string/cancle"
   		android:clickable="true"
   		android:visibility="gone"
   		android:onClick="commonClick"
   		android:id="@+id/footer_cancle"/>
    <!-- 今日货源 -->
    <TextView
   		android:layout_width="80dp"
    	android:layout_height="48dp"
    	android:layout_marginLeft="5dp"
    	android:padding="7dp"
    	android:gravity="center"
    	android:background="@drawable/footerbg1"
   		android:drawableLeft="@drawable/jrtb"
   		style="@style/main_style_4"
   		android:text="@string/goods"
   		android:clickable="true"
   		android:visibility="gone"
   		android:onClick="commonClick"
   		android:id="@+id/footer_goods_today"/>
    <!-- 历史货源 -->
    <TextView
   		android:layout_width="80dp"
    	android:layout_height="48dp"
    	android:layout_marginLeft="5dp"
    	android:padding="7dp"
    	android:gravity="center"
    	android:background="@drawable/footerbg1"
   		android:drawableLeft="@drawable/lshytb2"
   		style="@style/main_style_4"
   		android:text="@string/goods"
   		android:clickable="true"
   		android:visibility="gone"
   		android:onClick="commonClick"
   		android:id="@+id/footer_goods_history"/>
	<!-- 报错 -->
    <TextView
   		android:layout_width="80dp"
    	android:layout_height="48dp"
    	android:layout_marginLeft="5dp"
    	android:padding="7dp"
    	android:gravity="center"
    	android:background="@drawable/footerbg1"
   		android:drawableLeft="@drawable/bctb"
   		style="@style/main_style_4"
   		android:text="@string/goods"
   		android:clickable="true"
   		android:visibility="gone"
   		android:onClick="commonClick"
   		android:id="@+id/footer_bc"/>
    <!-- 删除消息 -->
    <TextView
   		android:layout_width="80dp"
    	android:layout_height="48dp"
    	android:layout_marginLeft="5dp"
    	android:padding="7dp"
    	android:gravity="center"
    	android:background="@drawable/footerbg1"
   		android:drawableLeft="@drawable/bctb"
   		style="@style/main_style_4"
   		android:text="@string/goods"
   		android:clickable="true"
   		android:visibility="gone"
   		android:onClick="commonClick"
   		android:id="@+id/footer_delmsg"/>
</LinearLayout>
