<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background"
    android:orientation="vertical" 
    android:gravity="center_horizontal">

    <include
        android:id="@+id/title_bar"
        layout="@layout/common_title" />

            <ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="20dp"
	            android:src="@drawable/aboutlogo"/>
			<ImageView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="20dp"
	            android:src="@drawable/setting_about_td"/>
            <TextView
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="20dp"
	            android:text="@string/about"
	            style="@style/main_style_3"/>
            <LinearLayout 
                android:layout_width="match_parent"
		        android:layout_height="0dp"
		        android:layout_marginTop="10dp"
		        android:orientation="vertical"
		        android:layout_weight="1"
		        android:gravity="center_horizontal">
		        <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            style="@style/main_style_3"
		            android:text="@string/needdriver"/>
		        <Button
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_marginTop="5dp"
		            android:background="@drawable/kefubg"
		            android:padding="5dp"
		            android:textColor="#FF6600"
		            android:textSize="16sp"
		            android:onClick="click"
		            android:id="@+id/dowdriver"
		            android:text="@string/dowdriver"/>
		    </LinearLayout>
            <LinearLayout 
                android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginBottom="10dp"
		        android:orientation="vertical"
		        android:gravity="center">
	            <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            style="@style/main_style_3"
		            android:id="@+id/version"/>
	            <TextView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:text="@string/about2"
		            android:layout_marginTop="5dp"
		            android:lineSpacingExtra="5dp"
		            android:gravity="center_horizontal"
		            style="@style/main_style_3"/>
            </LinearLayout>

</LinearLayout>