<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res/com.topjet.shipper"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:background="@color/color_background">
    
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/head480bg"
        android:gravity="center_horizontal"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        style="@style/login_1"
        android:text="@string/welcome"/>
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/banner"/>
    <!-- 账号 -->
    <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:layout_marginTop="7dp">
        <EditText
            android:layout_height="wrap_content"
        	android:layout_width="match_parent"
        	android:paddingLeft="30dp"
        	android:paddingTop="14.2dp"
        	android:paddingBottom="14.2dp"
        	android:background="@drawable/login_edit"
        	android:hint="@string/mobile"
        	android:maxLength="11"
        	android:inputType="number"
        	android:textSize="16sp"
        	style="@style/login_edit"
        	android:id="@+id/login_account"/>
        <ImageView
            android:layout_height="wrap_content"
        	android:layout_width="wrap_content"
        	android:paddingTop="14.2dp"
        	android:paddingBottom="14.2dp"
        	android:src="@drawable/usertb"
        	android:layout_alignLeft="@id/login_account"
        	android:layout_alignTop="@id/login_account"
        	android:layout_alignBottom="@id/login_account"
        	android:layout_marginLeft="5dp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:paddingLeft="7dp"
        android:paddingRight="7dp"
        android:layout_marginTop="7dp">
    	<!-- 密码 -->
        <RelativeLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:id="@+id/psdlayout">
	        <EditText
	            android:layout_height="wrap_content"
	        	android:layout_width="match_parent"
	        	android:paddingLeft="30dp"
	        	android:paddingTop="14.2dp"
	        	android:paddingBottom="14.2dp"
	        	android:background="@drawable/login_edit"
	        	android:hint="@string/password"
	        	android:inputType="textPassword"
	        	android:maxLength="11"
	        	style="@style/login_edit"
	        	android:id="@+id/login_password"/>
	        <ImageView
	            android:layout_height="wrap_content"
	        	android:layout_width="wrap_content"
	        	android:paddingTop="14.2dp"
	        	android:paddingBottom="14.2dp"
	        	android:src="@drawable/keytb"
	        	android:layout_alignLeft="@id/login_password"
	        	android:layout_alignTop="@id/login_password"
	        	android:layout_alignBottom="@id/login_password"
	        	android:layout_marginLeft="5dp"/>
	    </RelativeLayout>
	    <!-- 获取密码 -->
        <com.topjet.shipper.widget.CountDownButton
	        android:id="@+id/get_password"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/psdbg"
	        android:onClick="onClick"
	        android:text="@string/getpsd"
	        style="@style/login_getpwd"
	        custom:countDown="60"
	        custom:countDownLabel="%秒"/>
    </LinearLayout>
    <!-- 登录 -->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/loginbtn"
        android:text="@string/login"
        style="@style/login_1"
        android:id="@+id/login_submit"
        android:onClick="onClick"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">
	    <!-- 客服电话 -->
		<Button
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:background="@drawable/kefu4000"
	        style="@style/login_1"
	        android:onClick="onClick"
	        android:id="@+id/kefu4000" />
	</LinearLayout>
	<TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
         android:layout_gravity="center_horizontal"
         android:text="@string/owner"
         style="@style/main_style_3"/>
</LinearLayout>
